# UR3-PickPlace-MoveIt-Gazebo

./: README.md  continuous_motion.py  frames_2025-04-16_14.28.56.gv  launch_ur3_mesh_visualization.sh  launch_ur3_simple.sh  launch_ur3_visualization.sh  move_robot.py  pick_place_demo.launch.py  pick_place_motion.py  pick_place_motion.sh  pick_place_publisher.py  robot_demo.launch.py  setup_mesh_paths.sh  simple_publisher.py  ur3_absolute_paths.urdf.xacro  ur3_colored_shapes.urdf.xacro  ur3_config.rviz  ur3_report1.md  ur3_report2.md  ur3_simple.urdf.xacro  ur3_visualization.launch.py  ur3_visualization_with_meshes.launch.py  ur3_with_meshes.urdf.xacro  verify_robot_motion.py
move_robot/: CMakeLists.txt
move_robot/install/: local_setup.sh  setup.sh
move_robot/log/: latest_build
move_robot/src/: move_robot.cpp
ros2_ws/src/ur3_pick_place/: CMakeLists.txt  DETAILED_README.md  README.md  package.xml  setup.py
ros2_ws/src/ur3_pick_place/config/: controllers.yaml  gazebo_params.yaml  joint_limits.yaml  markers.rviz  moveit_planning.yaml  ur3.srdf  ur3_colored.rviz  ur3_controllers.yaml  ur3_materials.yaml  view_robot.rviz  visual_parameters.yaml
ros2_ws/src/ur3_pick_place/docs/: cubic_interpolation_theory.md  index.md  move_robot_explanation.md  running_and_customizing.md  shell_scripts_explanation.md
ros2_ws/src/ur3_pick_place/launch/: basic_display.launch.py  classic_gazebo.launch.py  colored_robot.launch.py  direct_colored_robot.launch.py  direct_robot_control.launch.py  fixed_robot.launch.py  gazebo_simulation.launch.py  marker_demo.launch.py  markers_only.launch.py  move_robot.launch.py  moveit_pick_place.launch.py  pick_place_demo.launch.py  process_xacro.sh  robot_description.launch.py  rviz_only.launch.py  simple_colored_robot.launch.py  simple_demo.launch.py  simple_gazebo.launch.py  simple_moveit.launch.py  simple_pick_place.launch.py  simple_robot_mover.launch.py  simple_visualize.launch.py  spawn_objects.launch.py  spawn_simple_box.launch.py  spawn_simple_ur3.launch.py  spawn_ur3_sdf.launch.py  start_gazebo.launch.py  test_pick_place.launch.py  test_robot.launch.py  ur3_correct_joints.launch.py  ur3_fixed_joints.launch.py  ur3_fixed_mesh.launch.py  ur3_fixed_state.launch.py  ur3_simple.launch.py  ur3_smooth_motion.launch.py  ur3_standard_model.launch.py  visualization.launch.py  visualization_demo.launch.py  visualization_only_demo.launch.py  visualize_robot.launch.py
ros2_ws/src/ur3_pick_place/scripts/: bridge_node.py  fixed_joint_state_publisher.py  move_robot.py  publish_markers.py  run_simulation.sh  run_simulation_tmux.sh  simple_pick_place.py  smooth_joint_publisher.py  trajectory_visualizer.py  ur3_color_enhancer.py  visual_enhancer.py
ros2_ws/src/ur3_pick_place/src/: marker_publisher.cpp  pick_place_node.cpp
ros2_ws/src/ur3_pick_place/ur3_pick_place/: direct_robot_control.py  pick_place_demo.py  pick_place_node.py  simple_robot_mover.py  visualization_node.py  visualization_only_node.py
ros2_ws/src/ur3_pick_place/urdf/: gripper.urdf.xacro  material.urdf.xacro  materials.xacro  simple_ur3.urdf  simple_ur3_test.urdf  ur3.urdf.xacro  ur3_colored.urdf.xacro  ur3_direct_colored.urdf.xacro  ur3_fixed.urdf.xacro  ur3_robot.urdf.xacro  ur3_test.urdf.xacro  ur3_with_gripper.urdf.xacro  (+1 more)
(+44 files in other folders)
